src/tests/fixtures/field_definitions/ReferenceNonGraphQLType.ts.expected
-----------------
INPUT
----------------- 
type SomeUndefienedType = string;

/** @gqlType */
class SomeType {
  /** @gqlField */
  somePropertyField: SomeUndefienedType;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_definitions/ReferenceNonGraphQLType.ts:6:22 - error: Unable to resolve type reference. In order to generate a GraphQL schema, Grats needs to be able to resolve all type references to their declaration. However this reference could not be resolved. Is it possible that this type is not defined in this file?

6   somePropertyField: SomeUndefienedType;
                       ~~~~~~~~~~~~~~~~~~
